app/assets/stylesheets/partials/modules/_drop-down-menu.scss
/* ======================================================================================
   @MODULES -> DROP DOWN MENU
   ====================================================================================== */

/*
  Usage:
    Common styles for a drop down menu.

  Note:
    -  Uses the 'Angular toggle visibility' plugin.
    -  Requires the 'Drop down' abstraction.
    -  A lot of these styles flow into the 'Filters' module.

  Demo:
    Style Guide -> Modules -> Drop Down Menu
*/

.drop-down-menu {

  /* Trigger - apply more top/bottom padding than '.btn--main' */
  .drop-down-menu__trigger {@include to-em(padding-top padding-bottom, $spacing-half+$spacing-micro);}

  /* 'Apply' button (used on multi-facet lists) */
  .drop-down-menu__apply {
    position: absolute;
    @include to-rem(right, $spacing-half);
    @include to-rem(top, 5);
    @include to-em(padding, $spacing-half $spacing-base);

    /* Webkit */
    @include target-webkit {
      @include to-rem(top, 4.5);
    }
  }

  /* --Global rules-- */

  /* Form elements */
  label,
  input[type="checkbox"] {vertical-align: middle;}

  input[type="checkbox"] {@include to-rem(margin-right, $spacing-quarter);}
}

  /* Target (drop down) */
  .drop-down-menu__target {
    @include font-size($font-size-sml);
    width: 100%;
    @include to-rem(margin-top, 10);

    /* Reduce the width at this breakpoint */
    @include respond-min($iphone-landscape) {
      @include to-rem(width, 285);
    }

    /* Reduce the top margin for IE 9/8 */
    .ie-9 &,
    .old-ie & {@include to-rem(margin-top, 4);}

    /* Old IE */
    @include old-ie {
      border: 1px solid $color-grey-3;
      border-bottom-width: 2px;
    }

    /* Drop down pointer arrow (inc. for 'Filters' module) */
    &:before,
    .filters__target:before {
      pointer-events: none;
      display: block;
      position: absolute;
      left: 10px;
      top: -9px;
      font-size: 26px;
      line-height: 11px;
      height: 11px;
      overflow: hidden;
      color: #fff;
      text-shadow: 0 -2px rgba(#e5e5e5, 0.9);
      @extend .icon:before;
      @extend .icon--arrow-up-full:before;

      /* iOS */
      .ios & {top: -10px;}

      /* IE 10 */
      @include ie-10-up {
        top: -8px;
      }

      /* Hide for IE 9/8 */
      .ie-9 &,
      .old-ie & {display: none;}
    }

    /* Header */
    .drop-down-menu__hdr {
      position: relative;
      text-align: center;
      color: $color-light-txt;

      /* Back button */
      .btn {
        position: absolute;
        top: 50%;
        left: 0;
        @include translate(0, -50%);
        @include to-rem(padding, $spacing-half);
      }
    }

    /* Header button */
    .drop-down-menu__hdr-btn.btn {
      @extend .islet;

      /* Forward indicator (arrow icon) */
      .icon.btn--pointer__icon {@include to-rem(right, $spacing-half);}
    }

    /* Divider */
    .drop-down-menu__divider {border-bottom: 1px solid $color-grey-1;}
  }

    /* List */
    .drop-down-menu__list {
      max-height: 230px;
      overflow-y: auto;

      /* iOS/Android */
      .ios &,
      .android & {
        overflow-y: scroll;
        -webkit-overflow-scrolling: touch;
      }

      /* List items */
      > li {

        /* Turn off border for last child */
        &:last-child {border-bottom: 0;}

        /* Apply 'Islet' padding to buttons */
        .btn--full {@extend .islet;}
      }

      /* Truncate `label`s */
      label.txt-truncate {
        display: inline-block;
        /* Need to override the helper class `!important` keyword */
        max-width: 90% !important;
      }
    }

    /* Range */
    .drop-down-menu__range {
      position: relative;

      /* Old IE */
      @include old-ie {
        width: 100%;
      }

      /* Range text inputs - position them side by side */
      .txt-input {
        width: 40%;

        /* Right most text input */
        &:last-child {float: right;}
      }

      /* 'To' label (sits in the middle of the text inputs) */
      span {
        position: absolute;
        top: 50%;
        left: 50%;
        @include translate(-50%, -50%);

        /* Old IE */
        @include old-ie {
          @include to-rem(margin-top, -10);
          @include to-rem(margin-left, -5);
        }
      }
    }

